Opened 11 years ago
Closed 8 years ago
#10027 closed bug (fixed)
ScreenSaver: Fade now screen problem
Reported by: | dsjonny | Owned by: | axeld |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Preferences/ScreenSaver | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
I found a small problem in using the ScreenSaveer preference. If I click on the Fade now monitor, the background color disappears. But if I click on the Screensavers tab and back, or move another window over the ScreenSave window than the back color is there again.
Maybe there is some overlay problem?
Using hrev46104 nightly anyboot.
Attachments (2)
Change History (8)
by , 11 years ago
Attachment: | ScreenSaver.png added |
---|
comment:1 by , 11 years ago
by , 11 years ago
Attachment: | 0001-Corrected-fade-in-out-monitor-drawing-problem-when-c.patch added |
---|
comment:2 by , 11 years ago
patch: | 0 → 1 |
---|
comment:4 by , 11 years ago
While that may fix the issue, it does look like a work around to an actual problem. I would not recommend applying this patch outside of a release branch without further investigation.
Note:
See TracTickets
for help on using tickets.
Using r20130926_a5d9833 Package Management the issue is the same, but on the Don't fade monitor...