ScreenSaver: redraw background of "active corner" screen in more cases.

Fixes #10027